--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,7 +26,7 @@
         <menu>
             <group
                 android:id="@+id/nav_gr_communicate"
-                android:checkableBehavior="single">
+                android:checkableBehavior="none">
 
                 <item
                     android:id="@+id/nav_notifications"
