nav drawer optimization

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:navigationItemSelectedListener="@{viewModel::onNavigationItemSelected}"
-            app:headerLayout="@layout/nav_header_main"
-            app:menu="@menu/activity_main_drawer" />
+            app:headerLayout="@layout/item_nav_header_main"
+            app:menu="@menu/menu_activity_main_nav_drawer" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
