--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     tools:context=".ui.main.gitreposearch.GitRepoSearchFragment">
 
     <data>
@@ -15,6 +16,7 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/fGitreposearchRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
