--- a/app/src/main/res/layout/fragment_gps.xml
+++ b/app/src/main/res/layout/fragment_gps.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
     tools:context=".ui.main.gps.GpsFragment">
 
     <data>
@@ -14,6 +13,7 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/fGPSRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
