--- a/app/src/main/res/layout/fragment_my_trip.xml
+++ b/app/src/main/res/layout/fragment_my_trip.xml
@@ -13,6 +13,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/fMyTripRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
