--- a/app/src/main/res/layout/fragment_progress_dialog.xml
+++ b/app/src/main/res/layout/fragment_progress_dialog.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content">
 
         <ProgressBar
-            android:id="@+id/pbProgress"
+            android:id="@+id/pdProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/pbText"
+            android:id="@+id/pdText"
             style="@style/HeaderText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -38,7 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pbProgress"
+            app:layout_constraintTop_toBottomOf="@id/pdProgress"
             tools:text="Loading..." />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
