--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -185,7 +185,7 @@
                     android:layout_alignTop="@id/ivEmailPicture"
                     android:layout_alignBottom="@id/ivEmailPicture"
                     android:layout_marginStart="10dp"
-                    android:layout_toStartOf="@id/ibAddEditEmail"
+                    android:layout_toStartOf="@id/ibEmailAddEdit"
                     android:layout_toEndOf="@id/ivEmailPicture"
                     android:hint="@string/hint_email"
                     app:hintTextAppearance="@style/HintStyle">
@@ -208,7 +208,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
-                    android:id="@+id/ibAddEditEmail"
+                    android:id="@+id/ibEmailAddEdit"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_alignTop="@id/input_layout_email"
@@ -239,7 +239,7 @@
                     android:layout_alignTop="@id/ivPhonePicture"
                     android:layout_alignBottom="@id/ivPhonePicture"
                     android:layout_marginStart="10dp"
-                    android:layout_toStartOf="@id/ibAddEditEmail"
+                    android:layout_toStartOf="@id/ibEmailAddEdit"
                     android:layout_toEndOf="@id/ivEmailPicture"
                     android:hint="@string/hint_phone"
                     app:hintTextAppearance="@style/HintStyle">
@@ -318,19 +318,19 @@
                 app:visibleOrGone='@{viewModel.cardNumber != null}'>
 
                 <ImageView
-                    android:id="@+id/myImageView"
+                    android:id="@+id/ivCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_credit_card_144dp" />
 
                 <TextView
-                    android:id="@+id/myImageViewText"
+                    android:id="@+id/tvCardNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/myImageView"
-                    android:layout_alignTop="@+id/myImageView"
-                    android:layout_alignEnd="@+id/myImageView"
-                    android:layout_alignBottom="@+id/myImageView"
+                    android:layout_alignStart="@+id/ivCard"
+                    android:layout_alignTop="@+id/ivCard"
+                    android:layout_alignEnd="@+id/ivCard"
+                    android:layout_alignBottom="@+id/ivCard"
                     android:layout_marginBottom="25dp"
                     android:gravity="bottom|center"
                     android:text='@{String.format("**** **** **** *%s", viewModel.cardNumber)}'
