--- a/app/src/main/res/layout/item_error.xml
+++ b/app/src/main/res/layout/item_error.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:text="ERROR"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
