--- a/app/src/main/res/layout/item_nav_header_main.xml
+++ b/app/src/main/res/layout/item_nav_header_main.xml
@@ -16,6 +16,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/navHeaderRoot"
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_header_height"
         android:background="@color/colorBackgroundPrimary"
@@ -28,7 +29,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <ImageView
-            android:id="@+id/ivProfilePicture"
+            android:id="@+id/ivNavProfilePicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -39,7 +40,7 @@
             app:srcCompat="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/tvNavName"
             style="@style/HeaderText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
